Final code without json

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,19 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,64 +54,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['admin', 'classDB', 'config', 'fruitsDB', 'local', 'met']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "mongo.list_database_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# assign the uk_food database to a variable name\n",
-    "db = mongo['uk_food']"
+    "database_name = \"uk_food\"\n",
+    "collection_name = \"establishments\"\n",
+    "db = mongo[database_name]\n",
+    "establishments = db[collection_name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "5762db84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/Users/go2themax99/Downloads/Starter_Code 8/Resources/establishments.json\") as file:\n",
+    "    data = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "ef1b89ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "db.list_collection_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6a0d92df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('646291719d58a79b795aaf57'),\n",
+       " 'name': 'Penang Flavours',\n",
+       " 'location': 'Greenwich',\n",
+       " 'cuisine': 'Halal',\n",
+       " 'rating': None,\n",
+       " 'reviews': []}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review a document in the establishments collection\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11c9f11b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# assign the collection to a variable\n",
-    "establishments = db['establishments']"
+    "# review a document in the establishments collection\n",
+    "db[collection_name].find_one()"
    ]
   },
   {
@@ -131,32 +166,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "restaurant_data = {\n",
+    "    \"name\": \"Penang Flavours\",\n",
+    "    \"location\": \"Greenwich\",\n",
+    "    \"cuisine\": \"Halal\",\n",
+    "    \"rating\": None,\n",
+    "    \"reviews\": []\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "result = establishments.insert_one(restaurant_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted document ID: 646296659d58a79b795aaf59\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "print(\"Inserted document ID:\", result.inserted_id)"
    ]
   },
   {
@@ -169,12 +221,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = {\n",
+    "    \"BusinessType\": \"Restaurant/Cafe/Canteen\"\n",
+    "}\n",
+    "\n",
+    "# Find the document matching the query and return only the specified fields\n",
+    "result = establishments.find_one(query, {\"BusinessTypeID\": 1, \"BusinessType\": 1, \"_id\": 0})\n",
+    "\n",
+    "# Print the result\n",
+    "pprint(result)"
    ]
   },
   {
@@ -187,20 +256,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fbd73e0e9d0>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one(\n",
+    "    {\"BusinessName\": \"Penang Flavours\"},\n",
+    "    {\"$set\": {\"BusinessTypeID\": \"YOUR_BUSINESS_TYPE_ID\"}}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Confirm that the new restaurant was updated\n"
    ]
@@ -215,12 +307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "count = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "\n",
+    "# Print the count\n",
+    "print(count)"
    ]
   },
   {
@@ -230,7 +334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "delete_result = establishments.delete_many({\"LocalAuthorityName\": \"Dover\"})"
    ]
   },
   {
@@ -245,12 +350,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('646291719d58a79b795aaf57'),\n",
+       " 'name': 'Penang Flavours',\n",
+       " 'location': 'Greenwich',\n",
+       " 'cuisine': 'Halal',\n",
+       " 'rating': None,\n",
+       " 'reviews': []}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "db[collection_name].find_one()"
    ]
   },
   {
@@ -291,11 +413,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c68bd104",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fbd73e7beb0>"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -325,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -339,7 +478,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "82a1290b5f906387898231cfc71d528830e0a845b8348805aeda0f1355cf9ffb"
+   }
   }
  },
  "nbformat": 4,
