--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -18,19 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,17 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['establishments']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "db.list_collection_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -93,31 +106,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents: 0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "no such item for Cursor instance",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/r1/2jt7f6k56sxdgqjqlwm49h0c0000gp/T/ipykernel_82159/1458800098.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Number of documents:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_documents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Display the first document in the results using pprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pymongo/cursor.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    758\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    759\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mdoc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 760\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"no such item for Cursor instance\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    761\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"index %r cannot be applied to Cursor instances\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    762\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: no such item for Cursor instance"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query = {\"hygiene_score\": 20}\n",
+    "results = establishments.find(query)\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "num_documents = establishments.count_documents(query)\n",
+    "print(\"Number of documents:\", num_documents)\n",
+    "# Display the first document in the results using pprint\n",
+    "pprint(results[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows: 0\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
+    "df = pd.DataFrame(results)\n",
     "\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "num_rows = len(df)\n",
+    "print(\"Number of rows:\", num_rows)\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "print(df.head(10))"
    ]
   },
   {
@@ -136,11 +186,14 @@
    "outputs": [],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query =\n",
+    "query_london = {\"LocalAuthority\": \"London\", \"RatingValue\": {\"$gte\": 4}}\n",
+    "results_london = establishments.find(query)\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "num_documents = establishments.count_documents(query)\n",
+    "print(\"Number of documents:\", num_documents)\n",
+    "# Display the first document in the results using pprint\n",
+    "pprint(results_london[0])"
    ]
   },
   {
@@ -151,10 +204,12 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "df_london = pd.DataFrame(results_london)\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "num_rows = len(df)\n",
+    "print(\"Number of rows:\", num_rows)\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "print(df_london.head(10))"
    ]
   },
   {
@@ -181,10 +236,16 @@
     "latitude = \n",
     "longitude = \n",
     "\n",
-    "query = \n",
-    "sort =  \n",
+    "query = {\n",
+    "    \"RatingValue\": 5,\n",
+    "    \"Latitude\": {\"$gte\": latitude - degree_search, \"$lte\": latitude + degree_search},\n",
+    "    \"Longitude\": {\"$gte\": longitude - degree_search, \"$lte\": longitude + degree_search}\n",
+    "}\n",
     "\n",
-    "# Print the results\n"
+    "sort = [(\"hygiene_score\", 1)]  \n",
+    "\n",
+    "# Print the results\n",
+    "pprint(establishments.find(query).sort(sort))"
    ]
   },
   {
@@ -194,7 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert result to Pandas DataFrame\n"
+    "# Convert result to Pandas DataFrame\n",
+    "df_lat = pd.DataFrame(establishments.find(query).sort(sort))"
    ]
   },
   {
@@ -216,10 +278,20 @@
     "# 1. Matches establishments with a hygiene score of 0\n",
     "# 2. Groups the matches by Local Authority\n",
     "# 3. Sorts the matches from highest to lowest\n",
-    "\n",
+    "pipeline = [\n",
+    "    {\"$match\": {\"hygiene_score\": 0}},\n",
+    "    {\"$group\": {\"_id\": \"$LocalAuthority\", \"count\": {\"$sum\": 1}}},\n",
+    "    {\"$sort\": {\"count\": -1}}\n",
+    "]\n",
+    "results = establishments.aggregate(pipeline)\n",
+    "results_list = list(results)\n",
     "# Print the number of documents in the result\n",
+    "num_documents = len(results_list)\n",
+    "print(\"Number of documents:\", num_documents)\n",
     "\n",
-    "# Print the first 10 results\n"
+    "# Print the first 10 results\n",
+    "for result in results_list[:10]:\n",
+    "    print(result)"
    ]
   },
   {
@@ -230,16 +302,19 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "df_pipeline = pd.DataFrame(results_list)\n",
     "# Display the number of rows in the DataFrame\n",
+    "num_rows = len(df_pipeline)\n",
+    "print(\"Number of rows:\", num_rows)\n",
     "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "# Display the first 10 rows of the DataFrame\n",
+    "print(df_pipeline.head(10))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +328,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "82a1290b5f906387898231cfc71d528830e0a845b8348805aeda0f1355cf9ffb"
+   }
   }
  },
  "nbformat": 4,
