Final code no json

--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -294,7 +294,11 @@
     }
    ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "query = {\"BusinessName\": \"Penang Flavours\"}\n",
+    "\n",
+    "result = establishments.find_one(query)\n",
+    "print(result)"
    ]
   },
   {
@@ -345,7 +349,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "remaining_count = establishments.count_documents({\"LocalAuthorityName\": \"Dover\"})\n",
+    "\n",
+    "print(\"Remaining count:\", remaining_count)"
    ]
   },
   {
@@ -400,7 +407,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "update_query = [\n",
+    "    {\"$set\": {\"longitude\": {\"$toDouble\": \"$longitude\"}}},\n",
+    "    {\"$set\": {\"latitude\": {\"$toDouble\": \"$latitude\"}}}\n",
+    "]\n",
+    "\n",
+    "establishments.update_many({}, update_query)"
    ]
   },
   {
@@ -411,12 +424,6 @@
    "source": [
     "Use `update_many` to convert `RatingValue` to integer numbers."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c68bd104",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -448,7 +455,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "update_int_query = [\n",
+    "    {\"$set\": {\"RatingValue\": {\"$toInt\": \"$RatingValue\"}}}\n",
+    "]\n",
+    "\n",
+    "establishments.update_many({}, update_int_query)\n"
    ]
   },
   {
@@ -458,7 +470,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "query = {\"BusinessName\": \"Penang Flavours\"}\n",
+    "\n",
+    "result = establishments.find_one(query)\n",
+    "print(result)"
    ]
   }
  ],
